Networking/Service Mesh/applications/lab/ocp/backend-v1-deployment-with-sidecar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://gitlab.com/ocp-demo/backend_quarkus
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "8"
  name: backend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - env:
        - name: APP_BACKEND
          value: https://httpbin.org/status/200
        - name: APP_VERSION
          value: v1
        image: quay.io/voravitl/backend-native:v1
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 120Mi
          requests:
            cpu: 50m
            memory: 40Mi
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - backend.$(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.user1-istio-system:15010
        - --zipkinAddress
        - zipkin.user1-istio-system:9411
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - NONE
        - --statusPort
        - "15020"
        - --applicationPorts
        - "8080"
        image: registry.redhat.io/openshift-service-mesh/proxyv2-rhel8:1.0.9
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          capabilities:
            drop:
            - KILL
            - SETUID
            - SETGID
            - MKNOD
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
