Networking/Service Mesh/applications/lab/ocp/station-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: station
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/ocp-demo/backend_quarkus.git'
  labels:
    app.kubernetes.io/component: station
    app.kubernetes.io/instance: station
    app.kubernetes.io/name: qurkus
    app.kubernetes.io/part-of: App-X
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: '11'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: station
      version: v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: station
        version: v1
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: backend
        image: quay.io/voravitl/backend:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "0.05"
            memory: 40Mi
          limits:
            cpu: "0.2"
            memory: 100Mi
        ports:
        - containerPort: 8080
