Networking/Service Mesh/applications/lab/ocp/backend-v3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v3
  labels:
    app: backend-v3
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: backend-v3
