Networking/Service Mesh/applications/lab/ocp/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
